--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  <div class="title">Convertidor de divisas</div>
+  <div class="title">CONVERTIDOR DE DIVISAS</div>
   <div class="input">
     <label for="monto">Cantidad:</label>
     <input type="text" id="monto" placeholder="Ingresa aca el monto del dinero">
