add another coin

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <label for="de"> De :</label>
     <select name="de" id="montoInicial">
       <option value="BOB">Bolivianos</option>
+      <opcion value="EUR">Euros</option>
       <option value="CLP">Pesos Chilenos</option>
       <option value="MXN">Pesos Mexicanos</option>
       <option value="ARS">Pesos argentinos</option>
